[package]
name = "voxel_renderer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
cfg-if = "1"
winit = "0.27.5"
wgpu = "0.14.2"
env_logger = "0.9"
log = "0.4"
pollster = "0.2.5"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"
cgmath = "0.18.0"

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]



[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[workspace]
resolver = "2"
